Added to Nav bar and fixed js

--- a/src/main/resources/templates/ForumsResource/seleniumTags.html
+++ b/src/main/resources/templates/ForumsResource/seleniumTags.html
@@ -17,7 +17,7 @@
             <div class="mb-3" id="pair-${seleniumTag_count}">
                 <div class="input-group">
                     <input type="text" class="form-control bg-light" name="key-{seleniumTag_count}" value="{seleniumTag.key}" readonly="readonly" required >
-                    <input type="text" class="form-control" name="value-{seleniumTag_count}" value="{seleniumTag.value}" required>
+                    <input type="text" class="form-control" name="value-{seleniumTag_count}" value="{seleniumTag.value}">
                     <button type="button" class="btn btn-danger" onclick="removePair({seleniumTag_count})">Remove</button>
                 </div>
             </div>
