--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -32,6 +32,9 @@
                 </ul>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/forums/selenium-cj-tags">Add/Edit Selenium Tags</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/forums/start-pipeline">Kick Off a Selenium Pipeline</a>
               </li>
             </ul>
