--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -6,6 +6,39 @@
 </head>
 <body>
 {#include nav.html} {/include}
+
+<div class="full-screen" id="main">
+    <center><h2>Current List of FFE Selenium Pipeline Runs</h2></center>
+    
+    {#for env in uniqueEnvs}
+        <h3>{env}</h3>
+        <table id={env} class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
+       <thead>
+            <tr>
+                <th>Name</th>
+                <th>Display Name</th>
+                <th>Branch</th>
+                <th>Schedule</th>
+                <th>Schedule Description</th>
+            </tr>
+        </thead>
+        <tbody> 
+        {#for cronJob in cronJobs}
+            {#if cronJob.env == env}               
+                <tr>
+                    <td>{cronJob.name}</td>
+                    <td>{cronJob.displayName}</td>
+                    <td>{cronJob.branch}</td>
+                    <td>{cronJob.schedule}</td>
+                    <td>{cronJob.humanReadableMsg}</td>
+                </tr>
+            {/if}
+        {/for}
+        </tbody>
+        </table>
+    {/for}
+</div>
+<!--
 <div class="container" id="main">
     <h2>Current List of FFE Selenium CronJobs</h2>
     <h3>Test 1</h3>
@@ -124,7 +157,7 @@
         {/for}
         </tbody>
     </table>
-</div>
+</div>-->
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
