Updated some misc stuff

--- a/src/main/resources/templates/ForumsResource/seleniumTags.html
+++ b/src/main/resources/templates/ForumsResource/seleniumTags.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selenium Tags</title>
+  <title>Add/Edit Selenium Display Tags</title>
 </head>
 <body>
    {#include nav.html} {/include}
   <div class="container mt-5">
-    <h2 class="text-center">And and Remove Selenium Key/Value Pairs</h2>
+    <h2 class="text-center">And and Remove Selenium Display Tag Key/Value Pairs</h2>
     <BR>
+    </P>
     <form id="keyValueForm">
       <div id="keyValuePairs" class="mb-3">
         <!-- Key-value pairs will be dynamically added here -->
