--- a/src/main/resources/templates/GlobalExceptionMapper/generalException.html
+++ b/src/main/resources/templates/GlobalExceptionMapper/generalException.html
@@ -7,7 +7,7 @@
 <body>
 {#include nav.html} {/include}
 <div class="full-screen" id="main">
-    <center><h2>Oops! Something went wrong.</h2></center>
+    <center><h2 class="text-primary">Oops! Something went wrong.</h2></center>
     <BR>
     <p><B>Error message </B>: {exception.getMessage()}</p>
 </div>
