--- a/src/main/resources/templates/GlobalExceptionMapper/generalException.html
+++ b/src/main/resources/templates/GlobalExceptionMapper/generalException.html
@@ -7,12 +7,20 @@
 <body>
 {#include nav.html} {/include}
 <div class="full-screen" id="main">
+    <BR>
     <center><h2 class="text-primary">Oops! Something went wrong.</h2></center>
     <BR>
-    <p><B>Error message </B>: {exception.getMessage()}</p>
-</div>
+    <center>
+        <div class="card border-warning mb-3" style="max-width: 70rem;">
+            <div class="card-header"><b>Error Message</b></div>
+                <div class="card-body">
+                    <p class="card-text">{exception.getLocalizedMessage}</p>
+                </div>
+            </div>
+        </div>
+    </center>
 <link href="/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.5.3.3.bundle.min.js"></script>
 {#include progress-bar.html} {/include}
 </body>
 </html>
