--- a/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
@@ -77,7 +77,7 @@
 <script src="https://cdn.datatables.net/plug-ins/2.1.7/dataRender/ellipsis.js"></script>
 <script src="/js/cronjobReport.js"></script>
 <link href="/css/flaty-bootstrap.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.5.3.3.bundle.min.js"></script>
 {#include progress-bar.html} {/include}
 </body>
 </html>
