--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -29,6 +29,7 @@
                   <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
                   <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
                   <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
+                  <li><a class="dropdown-item" href="/forums/mass-create">Mass Create Selenium Cronjobs</a></li>
                 </ul>
               </li>
               <li class="nav-item">
