Updated some text for misspellings

--- a/src/main/resources/templates/ForumsResource/massCreate.html
+++ b/src/main/resources/templates/ForumsResource/massCreate.html
@@ -25,8 +25,8 @@
         <div style="color:#CF4B2F" id="errorMessage"></div>
 
         <div>
-            <h2>Download Sample Fromatted Excel</h2>
-            <p>Click the button below to download the Sample Format Excel file with the correct column headers.</p>
+            <h2>Download Sample Formatted Excel</h2>
+            <p>Click the button below to download the sample Excel file with the correct column headers.</p>
             <a href="/ffe-cronjob/excel-example" class="btn btn-primary">
                 <i class="bi bi-download"></i> Download Excel File
             </a>
