Added icon to Head and slowed down progress bar

--- a/src/main/resources/templates/ForumsResource/seleniumTags.html
+++ b/src/main/resources/templates/ForumsResource/seleniumTags.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add/Edit Selenium Display Tags</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/selenium-logo.png">
 </head>
 <body>
    {#include nav.html} {/include}
