--- a/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FFE Selenium Report History</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/selenium-logo.png">
 </head>
 <body>
 {#include nav.html} {/include}
