--- a/src/main/resources/templates/ForumsResource/startPipeline.html
+++ b/src/main/resources/templates/ForumsResource/startPipeline.html
@@ -48,6 +48,7 @@
             </div>
             <BR>
             <div style="color:#CF4B2F" id="errorMessage"></div>
+            <div style="color:#43916B" id="successMessage" hidden="true"></div>
             <div class="control-wrapper">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
