Moved location of status messages

--- a/src/main/resources/templates/ForumsResource/startPipeline.html
+++ b/src/main/resources/templates/ForumsResource/startPipeline.html
@@ -50,10 +50,10 @@
             <div class="control-wrapper">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-            <div style="color:#CF4B2F" id="errorMessage"></div>
-            <div style="color:#43916B" id="successMessage" hidden="true"></div>
         </div>
       </form>
+      <div style="color:#CF4B2F" id="errorMessage"></div>
+      <div style="color:#43916B" id="successMessage"></div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/pipeline.js"></script>
