Made the Mass Update use a excel file

--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -28,7 +28,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
                   <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
-                  <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
+                  <li><a class="dropdown-item" href="/forums/mass-excel-update">Mass Update Selenium Cronjobs</a></li>
                   <li><a class="dropdown-item" href="/forums/mass-create">Mass Create Selenium Cronjobs</a></li>
                 </ul>
               </li>
