Added in progress bar to new pages

--- a/src/main/resources/templates/ForumsResource/massCreate.html
+++ b/src/main/resources/templates/ForumsResource/massCreate.html
@@ -37,5 +37,6 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/bootstrap.5.3.3.bundle.min.js"></script>
     <script src="/js/mass-create.js"></script>
+    {#include progress-bar.html} {/include}
 </body>
 </html>
