--- a/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
@@ -35,11 +35,11 @@
                                         <td>
                                             <div class="accordion-item">
                                                 <h2 class="accordion-header" id="heading-{reportDataList.runName}">
-                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body" style="">
+                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body">
                                                         {reportDataList.displayName}
                                                     </button>
                                                 </h2>
-                                                <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}" style="">
+                                                <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}">
                                                     <div class="accordion-body">
                                                         <table id="{reportDataList.runName}-Table" class="table">
                                                             <thead>
